[package]
name = "rexplode"
version = "1.0.0"
edition = "2021"
authors = ["woxtu <woxtup@gmail.com>"]
description = "Generate strings from the given regular expression"
readme = "README.md"
repository = "https://github.com/woxtu/rexplode"
license = "MIT"

[dependencies]
itertools = "0.10.1"
regex-syntax = "0.6.25"
